styles/rooms-section.module.css
.container {
  width: 100%;
  padding: 20px;
}

.cardsContainer {
  width: 80%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.card {
  width: 40%; 
  min-height: 300px;
  min-width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #cdcdcd;
  color: black;
  transition: all ease-in-out;
  transition-duration: 1.5;
  border-radius: 20px;
}

.card h3 {
  margin: 10px;
}
.cardImg {
  width: 100%;
  max-width: 500px;
  height: 300px;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
}

.bookBtn {
  color: white;
  background: green;
  font-weight: 400;
  padding: 10px 30px;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 10px;
  outline: none;
  border-radius: 5px;
  border: none;
  cursor: pointer;
}

.card:hover {
  box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, .5);
  scale: 1.05;
}

.bookBtn:hover {
  color: gold;
}

@media (max-width: 780px) {
  .cardsContainer {
    flex-direction: column;
    gap: 50px;
  }
  .card {
    width: 70%;
  }
}

@media (max-width: 580) {
  .cardsContainer {
    width: 90%;
  }

  .card{
    width: 100%;
  }
}

